Napravio sve osim uspješnog pokretanja docker compose up. Svi testovi prolaze. Kod pokretanja compose up s trebutnom skriptom javlja se error '200~dz2-main-libService-1  | java.sql.SQLSyntaxErrorException: (conn=5) Unknown database 'MLidb'~' nakon pokretanja baze i spajanja na nju. Nije mi jasno jer se nigjde osim u kontekstu testova ne spominje MLidb baza. Svugdje drugdje je m_lidb. Ne znam što se događa. Napravim normalno mvn clean install i onda docker compose up i pukne kod pokretanja lib servisa.

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,3 @@
-- bacanje exceptiona kod kršenja pravila sa zahtjevima
-- releaseDate format
-- inicijalizacijska skripta za MariaDB po uzoru na H2
-* testiraj pokretanje s docker compose
-- JaCoCo ekstenzija
-* openapi specifikacija
+
+* postaje unhealthy kad se doda volume for persistence
+*
